[gd_scene load_steps=4 format=3 uid="uid://dd202nu3my80f"]

[ext_resource type="Script" uid="uid://ditvu1f0ewvwf" path="res://scripts/options.gd" id="1_2iy26"]
[ext_resource type="FontFile" uid="uid://dnxlscub8ly7q" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_kv8mn"]
[ext_resource type="FontFile" uid="uid://xux3xfr3ypdx" path="res://assets/fonts/PixelOperator8.ttf" id="3_1sggn"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2iy26")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -159.0
offset_right = 159.0
offset_bottom = 48.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_kv8mn")
theme_override_font_sizes/font_size = 48
text = "Options"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -151.0
offset_top = 58.0
offset_right = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="Master" type="Node" parent="Panel/VBoxContainer"]

[node name="Label" type="Label" parent="Panel/VBoxContainer/Master"]
offset_left = 425.0
offset_top = 58.0
offset_right = 728.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("3_1sggn")
theme_override_font_sizes/font_size = 32
text = "Master"

[node name="Master" type="HSlider" parent="Panel/VBoxContainer/Master"]
offset_left = 425.0
offset_top = 94.0
offset_right = 728.0
offset_bottom = 110.0

[node name="Music" type="Node" parent="Panel/VBoxContainer"]

[node name="Label" type="Label" parent="Panel/VBoxContainer/Music"]
offset_left = 425.0
offset_top = 117.0
offset_right = 728.0
offset_bottom = 149.0
theme_override_fonts/font = ExtResource("3_1sggn")
theme_override_font_sizes/font_size = 32
text = "Music"

[node name="Music" type="HSlider" parent="Panel/VBoxContainer/Music"]
offset_left = 425.0
offset_top = 157.0
offset_right = 728.0
offset_bottom = 173.0

[node name="SFX" type="Node" parent="Panel/VBoxContainer"]

[node name="Label" type="Label" parent="Panel/VBoxContainer/SFX"]
offset_left = 425.0
offset_top = 180.0
offset_right = 728.0
offset_bottom = 212.0
theme_override_fonts/font = ExtResource("3_1sggn")
theme_override_font_sizes/font_size = 32
text = "SFX"

[node name="SFX" type="HSlider" parent="Panel/VBoxContainer/SFX"]
offset_left = 425.0
offset_top = 217.0
offset_right = 728.0
offset_bottom = 233.0

[connection signal="value_changed" from="Panel/VBoxContainer/Master/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/Music/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SFX/SFX" to="." method="_on_sfx_value_changed"]
